feat: add create, update, delete api for role applied
